crates/squealy/tests/compile_fail/runtime_insert_param_cannot_execute.stderr
error[E0277]: the trait bound `HCons<std::string::String, HNil>: NoRuntimeParams` is not satisfied
  --> tests/compile_fail/runtime_insert_param_cannot_execute.rs:15:10
   |
15 |         .insert();
   |          ^^^^^^ the trait `NoRuntimeParams` is not implemented for `HCons<std::string::String, HNil>`
   |
help: the trait `NoRuntimeParams` is implemented for `HNil`
  --> $WORKSPACE/crates/squealy-core/src/list.rs
   |
   | impl NoRuntimeParams for HNil {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `__SquealyUserWriteBuilder::<'conn, Conn, Assignments, Filters, FilterState>::insert`
  --> tests/compile_fail/runtime_insert_param_cannot_execute.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ required by this bound in `__SquealyUserWriteBuilder::<'conn, Conn, Assignments, Filters, FilterState>::insert`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
